<resources xliff:ignore="ExtraTranslation"
    xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Premier Pay</string>
    <string name="permission_not_allowed">Permission not allowed</string>
    <string name="oper_login">Login</string>
    <string name="log_in">Log on</string>
    <string name="log_out">Log out</string>
    <string name="log_in_id">ACOUNT NUMBER  </string>
    <string name="log_in_password">PASSWORD  </string>
    <string name="log_in_ok">OK</string>
    <string name="log_in_error_id">Acount number error.</string>
    <string name="log_in_error_password">Password error.</string>
    <string name="oper_is_not_exist">Operator does not exist</string>
    <string name="oper_pwd_is_err">Operator password err</string>
    <string name="initialize">Initialize</string>
    <string name="initialize_para_error">Initialize para error</string>
    <string name="initialize_para_initing">Initializing para......</string>
    <string name="initialize_init_failed">Initialize is failed</string>
    <string name="is_exit_app">Exit The App?</string>
    <string name="warnings">warning</string>
    <string name="warnings_code">warning code: </string>
    <string name="warnings_message">warning message: </string>
    <string name="warnings_message_auth_entication_err">Authentication failed : </string>
    <string name="warnings_message_device_err">Device exception: </string>
    <string name="warnings_get_failed">Get failed warnings.</string>
    <string name="title_sale">Sale</string>
    <string name="title_offline_sale">Offline sale</string>
    <string name="title_sale_with_cash">Sale with cash</string>
    <string name="title_only_cash">Only cash</string>
    <string name="title_sale_link">Link</string>
    <string name="title_balance">Balance Inquiry</string>
    <string name="title_consume">Consume</string>
    <string name="title_cashback">Cashback</string>
    <string name="app_buy">Buy</string>
    <string name="app_payment">Payment</string>
    <string name="app_transfer">Transfer</string>
    <string name="app_link">Link</string>
    <string name="app_qr_code">QR code</string>
    <string name="app_qr_code_scan">QR scanning</string>
    <string name="app_qr_code_query">QR query</string>
    <string name="app_qr_sale">QR Sale</string>
    <string name="app_qr_void">QR Void</string>
    <string name="app_qr_refund">QR Refund</string>
    <string name="app_void">Void</string>
    <string name="app_refund">Refund</string>
    <string name="auth_trans">Pre-auth</string>
    <string name="app_sale_cash">Sale with cash</string>
    <string name="app_cash_only">Cash only</string>
    <string name="app_cash_withdrawal">Cash Withdrawal</string>
    <string name="app_cash_deposit">Cash Deposit</string>
    <string name="app_reprint">Reprint</string>
    <string name="last_print">Last Print</string>
    <string name="app_lsat_query">Last transaction status</string>
    <string name="auth_void">Pre-Auth Revoke</string>
    <string name="auth_cm">Pre-Auth Completion</string>
    <string name="auth_cm_req">Cmplt Req</string>
    <string name="auth_cm_adv_all">Auth Cmplt Notify</string>
    <string name="auth_cm_adv">Cmplt Notify</string>
    <string name="auth_cm_void_all">Auth Cmplt Void</string>
    <string name="auth_cm_void">Pre-auth Cmplt Revoke</string>
    <string name="app_offline">Offline</string>
    <string name="app_settle">Settle</string>
    <string name="flow_scan_pay">Scan Pay</string>
    <string name="app_settings">Settings</string>
    <string name="system_settings">Sys Settings</string>
    <string name="system_informatin">Sys Info</string>
    <string name="production_inspection">Perform Test</string>
    <string name="app_not_install_hint">The application is not install!</string>
    <string name="amount_input">Input amount</string>
    <string name="amount_input_tip">Transaction amount :</string>
    <string name="amount_input_tip_cash">Cash amount :</string>
    <string name="amount_other_tip">Other amount :</string>
    <string name="amount_input_cancle">Cancel</string>
    <string name="amount_input_search_card">bank card</string>
    <string name="amount_input_scan">Scan</string>
    <string name="amount_input_skip">Skip</string>
    <string name="card_num_confirm_no">Card number： </string>
    <string name="card_num_confirm_ok">OK</string>
    <string name="card_num_confirm_cancle">Cancel</string>
    <string name="please_input_pin">PASSWORD:</string>
    <string name="pin_tip_amount">Amount:</string>
    <string name="pin_tip_card_num">Card Number:</string>
    <string name="scan_error_code">Error code:</string>
    <string name="setting_activity_name">Settings</string>
    <string name="title_sale_test">Sale Test</string>
    <string name="term_para">Merchant And Terminal</string>
    <string name="merchine_id">Merchant NO.:</string>
    <string name="merchine_name">Merchant Name:</string>
    <string name="term_id">Terminal NO.:</string>
    <string name="term_para_cancle">Cancel</string>
    <string name="term_para_save">Save</string>
    <string name="tms_url">TMS Url:</string>
    <string name="communication_para">Communication Para</string>
    <string name="host_ip_1">Host IP:</string>
    <string name="host_port_1">Host Port:</string>
    <string name="host_ip_2">Second IP:</string>
    <string name="https_url">Https Url:</string>
    <string name="communication_time">Communication timeout:</string>
    <string name="communication_para_backups">Enable communication Para </string>
    <string name="communication_para_eaable_ssl">Enable SSL </string>
    <string name="host_port_2">Second Port:</string>
    <string name="tpdu_value">TPDU:</string>
    <string name="tip_mer_id_changed_error">The length of merchant number must be 15 </string>
    <string name="tip_term_id_changed_error">The length of device number must be 8 </string>
    <string name="communication_para_cancle">Cancel</string>
    <string name="communication_para_save">Save</string>
    <string name="trad_manager">交易管理设置</string>
    <string name="trad_is_no_pin">非接是否免密</string>
    <string name="trad_no_pin_max_amount">免密金额</string>
    <string name="trad_is_no_sign">非接是否免签</string>
    <string name="trad_para_cancle">Cancel</string>
    <string name="trad_para_save">Save</string>
    <string name="online_init">Online Initialization</string>
    <string name="please_input_secure_password">Secure Password:</string>
    <string name="input_secure_password_error">Security password error</string>
    <string name="please_input_init_password">Initial Password:</string>
    <string name="input_init_password_error">Initial password error</string>
    <string name="online_init_cancle">Cancel</string>
    <string name="online_init_ok">OK</string>
    <string name="ic_capk_para_download">DownLoad IC CAPK and PARA</string>
    <string name="ic_capk_para_download_success">DownLoad IC card public key and parameters success</string>
    <string name="tmk_tpk_tak_trk_download">DownLoad TMK、TAK、TPK、TRK</string>
    <string name="tmk_download_succ">DownLoad TMK success</string>
    <string name="tmk_download_err">DownLoad TMK failed</string>
    <string name="tak_download_succ">DownLoad TAK success</string>
    <string name="tak_download_err">DownLoad TAK failed</string>
    <string name="tpk_download_succ">DownLoad TPK success</string>
    <string name="tpk_download_err">DownLoad TPK failed</string>
    <string name="trk_download_succ">DownLoad TRK success</string>
    <string name="trk_download_err">DownLoad TRK failed</string>
    <string name="other_setting">Other Settings</string>
    <string name="text_param_trans">Transmit Parameters</string>
    <string name="text_status_upload">Upload Status</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="text_ic_capk_download">DownLoad CAPK</string>
    <string name="text_ic_para_download">DownLoad PARM</string>
    <string name="text_echo_test">"Echo Test"</string>
    <string name="text_consume">"Consume"</string>
    <string name="text_consume_positive">"Consume positive"</string>
    <string name="text_scan">"Scan pay"</string>
    <string name="device_info_default">Unknown</string>
    <string name="device_info_hardware">Hardware information</string>
    <string name="device_info_vendor">Vendor name: </string>
    <string name="device_info_model">Device model: </string>
    <string name="device_info_uniqueCode">Device uniqueCode: </string>
    <string name="device_info_hardware_ver">Hardware version: </string>
    <string name="device_info_kernel_ver">Kernel version: </string>
    <string name="device_info_rom_ver">ROM version: </string>
    <string name="device_info_firmware_ver">Firmware version: </string>
    <string name="device_info_secure_firmware_ver">Secure firmware version: </string>
    <string name="device_info_ksn">KSN No.: </string>
    <string name="device_info_imsi">IMSI No.: </string>
    <string name="device_info_imer">IMEI No.: </string>
    <string name="software_info_software">Software information</string>
    <string name="software_info_os_version">OS version: </string>
    <string name="software_info_android_version">Android version: </string>
    <string name="software_info_lkl_version">LKL interface version: </string>
    <string name="software_info_lkl_to_android_version">Rules LKL maked to Android version:</string>
    <string name="software_info_app_version">Application version: </string>
    <string name="other_info">Others</string>
    <string name="other_info_save_path">Path to get storage</string>
    <string name="other_info_sim_iccId">The ICCID of SIM card</string>
    <string name="other_info_silent_install_app">Install app silently</string>
    <string name="other_info_set_apn">Set APN</string>
    <string name="other_info_update_system_time">Update system time</string>
    <string name="other_info_firmware_upgrade">Firmware upgrade</string>
    <string name="other_info_firmware_update">Firmware update</string>
    <string name="other_info_firmware_update_status">Enquiry firmware update status</string>
    <string name="other_info_reboot">Reboot</string>
    <string name="trans_amount_0">Amount：</string>
    <string name="trans_amount">Transaction amount： </string>
    <string name="trans_amount_cash">Cash amount： </string>
    <string name="search_card_rf_priority_more">Insertor swip card</string>
    <string name="search_card_rf">Please put RF card on the device</string>
    <string name="search_card_ic">Please insert IC card to the right of device</string>
    <string name="set_terminal_param">Terminal parameter</string>
    <string name="set_commun_param">Communication parameter</string>
    <string name="set_transcation_param">Transaction management</string>
    <string name="set_key_param">Terminal key management</string>
    <string name="set_operator_param">Password management</string>
    <string name="set_other_manage">Other management</string>
    <string name="set_about_param">About</string>
    <string name="set_master_key_index">Master key index</string>
    <string name="set_enter_pin_key">Enter PIN KEY</string>
    <string name="set_enter_mac_key">Enter MAC KEY</string>
    <string name="set_enter_data_key">Enter DATA KEY</string>
    <string name="set_enter_unionpay_key">Master key plaintext</string>
    <string name="set_pci_mode">Set PCI Mode</string>
    <string name="elec_sign_confirm">Confirm</string>
    <string name="fingerprint_reset">Reset</string>
    <string name="finger_input_tip">Please Press Your Finger</string>
    <string name="btn_cal_1">1</string>
    <string name="btn_cal_2">2</string>
    <string name="btn_cal_3">3</string>
    <string name="btn_cal_4">4</string>
    <string name="btn_cal_5">5</string>
    <string name="btn_cal_6">6</string>
    <string name="btn_cal_7">7</string>
    <string name="btn_cal_8">8</string>
    <string name="btn_cal_9">9</string>
    <string name="btn_cal_0">0</string>
</resources>