<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="false"
    android:descendantFocusability="blocksDescendants"
    android:theme="@style/Theme.MaterialComponents.Light">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn1"
        style="@style/NumberPadButtonStyle"
        android:text="@string/btn_cal_1"
        android:focusable="false"
        app:elevation="8dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn2"
        style="@style/NumberPadButtonStyle"
        android:text="@string/btn_cal_2"
        app:elevation="8dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn3"
        style="@style/NumberPadButtonStyle"
        android:text="@string/btn_cal_3"
        app:elevation="8dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn4"
        style="@style/NumberPadButtonStyle"
        android:text="@string/btn_cal_4"
        app:elevation="8dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn5"
        style="@style/NumberPadButtonStyle"
        android:text="@string/btn_cal_5"
        app:elevation="8dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn6"
        style="@style/NumberPadButtonStyle"
        android:text="@string/btn_cal_6"
        app:elevation="8dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn7"
        style="@style/NumberPadButtonStyle"
        android:text="@string/btn_cal_7"
        app:elevation="8dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn8"
        style="@style/NumberPadButtonStyle"
        android:text="@string/btn_cal_8"
        app:elevation="8dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn9"
        style="@style/NumberPadButtonStyle"
        android:text="@string/btn_cal_9"
        app:elevation="8dp" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnClear"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/bg_keypad_number_field"
        android:elevation="4dp"
        android:scaleType="center"
        app:srcCompat="@drawable/db_clears"
        android:focusable="false"
        android:focusableInTouchMode="false"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn0"
        style="@style/NumberPadButtonStyle"
        android:text="@string/btn_cal_0"
        app:elevation="8dp" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnConfirm"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/bg_keypad_number_field"
        android:elevation="4dp"
        android:scaleType="center"
        app:srcCompat="@drawable/ic_proceed"
        android:focusable="false"
        android:focusableInTouchMode="false"/>

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:orientation="horizontal"
        app:constraint_referenced_ids="btn1,btn2,btn3,btn4,btn5,btn6,btn7,btn8,btn9,btnClear,btn0,btnConfirm"
        app:flow_maxElementsWrap="3"
        app:flow_wrapMode="chain"
        app:flow_verticalGap="16dp"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>