<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:orientation="vertical">    <include layout="@layout/header_layout" />    <RelativeLayout        android:layout_width="match_parent"        android:layout_height="match_parent">        <TextView            android:id="@+id/fingerprint_tv"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_centerHorizontal="true"            android:layout_marginTop="20dp"            android:text="@string/finger_input_tip"            android:textSize="@dimen/sp_20"            android:textColor="@color/colorAccent" />        <pl.droidsonroids.gif.GifImageView            android:id="@+id/fingerprint_im"            android:scaleType="centerInside"            android:layout_centerInParent="true"            android:src="@mipmap/fingerprint"            android:layout_width="wrap_content"            android:layout_height="wrap_content"/>        <LinearLayout            android:layout_marginTop="@dimen/dp_10"            android:layout_marginBottom="@dimen/dp_10"            android:layout_alignParentBottom="true"            android:orientation="horizontal"            android:id="@+id/ll_clear"            android:layout_width="match_parent"            android:layout_height="wrap_content">            <Button                android:id="@+id/bt_fingerprint_clear"                android:layout_marginLeft="@dimen/dp_10"                android:layout_marginRight="@dimen/dp_5"                android:text="@string/fingerprint_reset"                android:layout_weight="1"                android:layout_width="0dp"                android:layout_height="match_parent"/>            <Button                android:id="@+id/bt_fingerprint_confirm"                android:layout_marginLeft="@dimen/dp_5"                android:layout_marginRight="@dimen/dp_10"                android:text="@string/elec_sign_confirm"                android:layout_weight="1"                android:layout_width="0dp"                android:layout_height="match_parent"/>        </LinearLayout>    </RelativeLayout></LinearLayout>